docs/tls-termination/yamlfiles/my-nginx-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: my-nginx-service
spec:
  selector:
    app: my-nginx
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 80
