docs/tls-termination/yamlfiles/my-nginx-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-nginx-ingress
spec:
  tls:
  - hosts:
    - <Enter your FQDN here, for example: www.EXAMPLE.com>
    secretName: <tls_secret>
  rules:
  - host: <Enter your FQDN here, for example: www.EXAMPLE.com>
    http:
      paths:
      - path: /
        backend:
          serviceName: my-nginx-service
          servicePort: 8000
